--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Feb 21 14:43:12 ICT 2022
-sdk.dir=C\:\\Users\\Arya Enrico\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\phaks\\AppData\\Local\\Android\\Sdk
