--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 21 14:43:12 ICT 2022
-sdk.dir=C\:\\Users\\phaks\\AppData\\Local\\Android\\Sdk
+#Thu Feb 24 22:44:02 ICT 2022
+sdk.dir=C\:\\Users\\Arya Enrico\\AppData\\Local\\Android\\Sdk
