menambah fitur mutasi dan pengajuan pinjaman

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".Activty.HistoryActivity"
             android:exported="false" />
         <activity
-            android:name=".Activty.VerifyActivity"
+            android:name=".Activty.PengajuanActivity"
             android:exported="false" />
         <activity
             android:name=".Activty.HomeActivity"
