--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity
             android:name=".activty.HomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.home"/>
+            android:theme="@style/Theme.AppCompat.Light"/>
         <activity
             android:name=".splashscreen"
             android:exported="true">
