--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-BASE_URL = "https://ublmobilekmmi.web.id/bank_sampah/"
+BASE_URL = "https://budiluhursampah.000webhostapp.com/"
